# R2T2

./: .all-contributorsrc  .flake8  .gitignore  .readthedocs.yml  Pull-Request-Test_Deyl_ICL  README.md  add.txt  azure-pipelines.yml  pyproject.toml  pytest.ini  r2t2.py  r2tracker.py  run_tests_examples_and_docs.py  setup.cfg  setup.py  test.md  test.py  test_r2t2.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: add-reference.rst  conf.py  index.rst  references.rst  runtime-tracker.rst
docs/dev-guide/: installation.rst
docs/examples/: decorator_example.py  docstring_sphinx_cite.py  example.ipynb  minimal-class.py  minimal-method.py  minimal.py  minimal_class.py  minimal_method.py  multiple.py  reference_docstring.py
docs/getting-started/: add-reference.rst  installation.rst  runtime-tracker.rst  static-tracker.rst
docs/user-guide/: output-format.rst  references.rst
examples/: docstring_reference.py  reference_annotation.py
r2t2/: __init__.py  __main__.py  core.py  docstring_parser.py  docstring_reference_parser.py  doi2bib.py  plain_text_parser.py  r2t2.py  reference_processors.py  runtime_tracker.py  static_parser.py  static_tracker.py  writers.py
tests/: conftest.py  test__main__.py  test_core.py  test_docstring_parser.py  test_docstring_reference_parser.py  test_examples.py  test_plain_text_parser.py  test_r2t2.py  test_reference_processors.py  test_static_parser.py  test_writers.py
tests/fixtures/: notebook_doi.ipynb  sample.bib  sample_code.py
