[tool.poetry]
name = "R2T2"
version = "0.3.1"
description = "Research references tracking tool"
authors = ["Research Computing Service, Imperial College London <rcs-support@imperial.ac.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
wrapt = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-flake8 = "^1.0.6"
pytest-mypy = "^0.7.0"
pytest-cov = "^2.10.1"
bump2version = "^1.0.0"
coverage = {version = "^5.2.1", extras = ["toml"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
addopts = "--flake8 --mypy --cov=r2t2 --cov-report=html:htmlcov"

[tool.coverage.run]
omit = ["r2t2/__init__.py"]

[tool.black]
exclude = '\.venv/|\.eggs/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true

# NB. See setup.cfg for configuration for the following:
# - bumpversion
# - flake8